--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -17,13 +17,16 @@
                 <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/purchase-orders']">
                     <i class="fa fa-shopping-basket" aria-hidden="true"></i> Purchase Orders
                 </a>
-                <a class="dropdown-item" href="javascript:void(0)" >
+                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/grn']">
                     <i class="fa fa-truck" aria-hidden="true"></i> GRN
                 </a>
-                <a class="dropdown-item" href="javascript:void(0)" >
+                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/grn-reverse']">
+                    <i class="fa fa-truck" aria-hidden="true"></i> GRN Reverse
+                </a>
+                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/purchase-invoice']">
                     <i class="fa fa-money" aria-hidden="true"></i> Purchase Invoice
                 </a>
-                <a class="dropdown-item" href="javascript:void(0)" >
+                <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/payment']">
                     <i class="fa fa-money" aria-hidden="true"></i> Payments
                 </a>
             </div>
@@ -114,10 +117,10 @@
                     <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/department']">
                         <i class="fa fa-sitemap" aria-hidden="true"></i> Department
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/designation']">
                         <i class="fa fa-address-card" aria-hidden="true"></i> Designation
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/employees']">
                         <i class="fa fa-users" aria-hidden="true"></i> Employees
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)">
