--- a/src/app/layout/transport/transport.component.html
+++ b/src/app/layout/transport/transport.component.html
@@ -14,7 +14,7 @@
     <div class="col-md-12">
     <div class="card">
       <div class="card-header">Transport</div>
-      <table class="card-body table table-hover">
+      <table class="card-body table table-hover table-sm table-bordered">
           <thead>
           <tr>
               <th>Sl.No.</th>
