--- a/src/app/layout/purchase-requisition/purchase-requisition.component.html
+++ b/src/app/layout/purchase-requisition/purchase-requisition.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
         <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
         <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-requisition/add-purchase-requisition')"><i class="fa fa-plus"></i> New Purchase Organization</button>
+        <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-requisition/add')"><i class="fa fa-plus"></i> New Purchase Organization</button>
     </div>
     <div class="clearfix"></div>
   </div>
@@ -14,7 +14,7 @@
     <div class="col-md-12">
     <div class="card">
       <div class="card-header">Purchase Requisition</div>
-      <table class="card-body table table-hover">
+      <table class="card-body table table-hover table-sm table-bordered">
           <thead>
           <tr>
               <th>Sl.No.</th>
