--- a/src/app/layout/purchase-group/purchase-group-edit/purchase-group-edit.component.html
+++ b/src/app/layout/purchase-group/purchase-group-edit/purchase-group-edit.component.html
@@ -19,14 +19,14 @@
                       <div class="row">
                           <div class="form-group col-md-6">
                               <label>Pruchase Group Name</label>
-                              <input class="form-control" [(ngModel)]="purchaseGroup.pruchase_group_name" placeholder="Pruchase Group Name" name="pruchase_group_name">
+                              <input class="form-control" [(ngModel)]="purchaseGroup.name" name="name" placeholder="Pruchase Group Name">
                           </div>
                           <div class="form-group col-md-6">
                               <label>Group Description</label>
-                              <textarea class="form-control" [(ngModel)]="purchaseGroup.pruchase_group_description" rows="1" placeholder="Group Description" name="pruchase_group_description">{{purchaseGroup.pruchase_group_description}}</textarea>
+                              <textarea class="form-control"  rows="1" placeholder="Group Description" [(ngModel)]="purchaseGroup.description" name="description">{{purchaseGroup.description}}</textarea>
                           </div>
                           <div class="form-group col-md-12" style="text-align: right">
-                              <button type="submit" class="btn btn-success">Submit</button>
+                              <button type="submit" class="btn btn-success" (click)="updatePurchaseGroup()">Submit</button>
                               <button type="reset" class="btn btn-secondary">Reset</button>
                           </div>
                       </div>
