--- a/src/app/layout/company/company-tree/company-tree.component.html
+++ b/src/app/layout/company/company-tree/company-tree.component.html
@@ -2,46 +2,33 @@
   <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
      <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
      <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-     <button type="button" class="btn btn-success" (click)="btnClickNav('company/add-company')"><i class="fa fa-plus"></i> New Company</button>
+     <button type="button" class="btn btn-success" (click)="btnClickNav('company/add')"><i class="fa fa-plus"></i> New Company</button>
   </div>
   <div class="clearfix"></div>
 </div>
 
 <hr/>
-<div>
+<div style="text-align: center">
   <div class="tree">
-      <ul>
-          <li>
-              <a href="javascript:void(0);">Mother company</a>
-              <ul>
-                <li>
-                  <a href="javascript:void(0);">Child Company 1</a>
-                  <ul>
-                    <li>
-                        <a href="javascript:void(0);">Sub Child Company 1</a>
-                        
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);">Sub Child Company 2</a>
-                    </li>
-
-                  </ul>
-                </li>
-                <li>
-                    <a href="javascript:void(0);">Child Company 2</a>
-                    <ul>
-                        <li>
-                            <a href="javascript:void(0);">Sub Child Company 3</a>
-                            
-                        </li>
-                        <li>
-                            <a href="javascript:void(0);">Sub Child Company 4</a>
+    <ul>
+        <li *ngFor="let company of companyList" >
+            <a href="javascript:void(0);" [routerLink]="['/company/details', company.id]">{{company.company_name}}</a>
+            <ul *ngIf="company.children.length>0">
+                <li *ngFor="let subCompany of company.children">
+                    <a href="javascript:void(0);" [routerLink]="['/company/details', subCompany.id]">{{subCompany.company_name}}</a>
+                    <ul *ngIf="subCompany.children.length>0">
+                        <li *ngFor="let subSubCompany of subCompany.children">
+                            <a href="javascript:void(0);" [routerLink]="['/company/details', subSubCompany.id]">{{subSubCompany.company_name}}</a>
+                            <ul *ngIf="subSubCompany.children.length>0">
+                                <li *ngFor="let subSubSubCompany of subSubCompany.children">
+                                    <a href="javascript:void(0);" [routerLink]="['/company/details', subSubSubCompany.id]">{{subSubSubCompany.company_name}}</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
-                
-              </ul>
-          </li>
-      </ul>
+            </ul>
+        </li>
+    </ul>
   </div>
 </div>
