--- a/src/app/layout/purchase-organization/purchase-organization-edit/purchase-organization-edit.component.html
+++ b/src/app/layout/purchase-organization/purchase-organization-edit/purchase-organization-edit.component.html
@@ -1,39 +1,39 @@
 <div>
-  <app-page-header [heading]="'Purchase Organization Edit'" [icon]="'fa fa-university'"></app-page-header>
-  <div>
-    <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-        <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-        <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-organization')"><i class="fa fa-arrow-left"></i> Back</button>
-    </div>
-    <div class="clearfix"></div>
-  </div>
-  <hr/>
-  <div>
-      <div class="row">
-        <div class="col-md-12">
-            <form role="form">                  
-              <div class="card bg-light mb-3">
-                  <div class="card-header" style="background-color:#868e96; color: #fff;">Pruchase Organization Edit</div>
-                  <div class="card-body">
-                      <div class="row">
-                          <div class="form-group col-md-6">
-                              <label>Pruchase Organization Name</label>
-                              <input class="form-control" [(ngModel)]="purchaseOrganization.pruchase_organization_name" placeholder="Pruchase Organization Name" name="pruchase_organization_name">
-                          </div>
-                          <div class="form-group col-md-6">
-                              <label>Organization Description</label>
-                              <textarea class="form-control" [(ngModel)]="purchaseOrganization.pruchase_organization_description" rows="1" placeholder="Organization Description" name="pruchase_organization_description">{{purchaseOrganization.pruchase_organization_description}}</textarea>
-                          </div>
-                          <div class="form-group col-md-12" style="text-align: right">
-                              <button type="submit" class="btn btn-success">Submit</button>
-                              <button type="reset" class="btn btn-secondary">Reset</button>
-                          </div>
-                      </div>
-                  </div>
-              </div>   
-            </form>
+        <app-page-header [heading]="'Purchase Organization Edit'" [icon]="'fa fa-university'"></app-page-header>
+        <div>
+          <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
+              <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
+              <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
+              <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-organization')"><i class="fa fa-arrow-left"></i> Back</button>
+          </div>
+          <div class="clearfix"></div>
         </div>
-      </div>
-  </div>
-</div>
+        <hr/>
+        <div>
+            <div class="row">
+              <div class="col-md-12">
+                  <form role="form">                  
+                    <div class="card bg-light mb-3">
+                        <div class="card-header" style="background-color:#868e96; color: #fff;">Pruchase Organization Edit</div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    <label>Pruchase Organization Name</label>
+                                    <input class="form-control" placeholder="Pruchase Organization Name" [(ngModel)]="purchaseOrganization.name" name="name">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label>Organization Description</label>
+                                    <textarea class="form-control" rows="1" placeholder="Organization Description" [(ngModel)]="purchaseOrganization.description" name="description">{{purchaseOrganization.description}}</textarea>
+                                </div>
+                                <div class="form-group col-md-12" style="text-align: right">
+                                    <button type="submit" class="btn btn-success" (click)="updatePurchaseOrganization()">Submit</button>
+                                    <button type="reset" class="btn btn-secondary">Reset</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>   
+                  </form>
+              </div>
+            </div>
+        </div>
+    </div>
