--- a/src/app/layout/purchase-organization/purchase-organization.component.html
+++ b/src/app/layout/purchase-organization/purchase-organization.component.html
@@ -25,27 +25,21 @@
           </tr>
           </thead>
           <tbody>
-          <tr>
-              <th scope="row">1</th>
-              <td>Demo Organization</td>
-              <td>Demo Organization Description</td>
-              <td><i class="fa fa-thumbs-up"></i> Active</td>
+          <tr *ngFor="let purchaseOrganization of purchaseOrganizationList ; let i = index">
+              <th scope="row">{{i +1}}</th>
+              <td>{{purchaseOrganization.name}}</td>
+              <td>{{purchaseOrganization.description}}</td>
               <td>
-                <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/purchase-organization/edit', 1]"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;&nbsp;
-                <a href="javascript:void(0);" title="Map" name="Map"><i class="fa fa-map-signs"></i></a>
+                  <a href="javascript:void(0);" title="Active" name="Active" (click)="inactivePurchaseOrganization(purchaseOrganization.id)" *ngIf="purchaseOrganization.status==true"><i class="fa fa-thumbs-up"></i> Active</a>
+                  <a href="javascript:void(0);" title="Inactive" name="Inactive" (click)="activePurchaseOrganization(purchaseOrganization.id)" *ngIf="purchaseOrganization.status==false"><i class="fa fa-thumbs-down"></i> Inactive</a>
+              </td>
+              <td>
+                <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/purchase-organization/edit', purchaseOrganization.id]"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;&nbsp;
+                <a href="javascript:void(0);" title="Map" name="Map" [routerLink]="['/purchase-organization/mapping', purchaseOrganization.id]"><i class="fa fa-map-signs"></i></a>
               </td>
               
           </tr>
-          <tr>
-              <th scope="row">2</th>
-              <td>Demo Organization 2</td>
-              <td>Demo Organization Description 2</td>
-              <td><i class="fa fa-thumbs-down"></i> Inactive</td>
-              <td>
-                <a href="javascript:void(0);" title="Edit" name="Edit"  [routerLink]="['/purchase-organization/edit', 2]"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;&nbsp;
-                <a href="javascript:void(0);" title="Map" name="Map"><i class="fa fa-map-signs"></i></a>
-              </td>
-          </tr>
+          
           </tbody>
       </table>
     </div>
