--- a/src/app/layout/sale-group/sale-group-add/sale-group-add.component.html
+++ b/src/app/layout/sale-group/sale-group-add/sale-group-add.component.html
@@ -19,14 +19,14 @@
                         <div class="row">
                             <div class="form-group col-md-6">
                                 <label>Sale Group Name</label>
-                                <input class="form-control" placeholder="Sale Group Name">
+                                <input class="form-control" placeholder="Sale Group Name" [(ngModel)]="saleGroup.name" name="name">
                             </div>
                             <div class="form-group col-md-6">
                                 <label>Group Description</label>
-                                <textarea class="form-control" rows="1" placeholder="Group Description"></textarea>
+                                <textarea class="form-control" rows="1" placeholder="Group Description" [(ngModel)]="saleGroup.description" name="description">{{saleGroup.description}}</textarea>
                             </div>
                             <div class="form-group col-md-12" style="text-align: right">
-                            <button type="submit" class="btn btn-success">Submit</button>
+                            <button type="submit" class="btn btn-success" (click)="addNewSaleGroup()">Submit</button>
                             <button type="reset" class="btn btn-secondary">Reset</button>
                             </div>
                         </div>
