--- a/src/app/layout/sale-organization/sale-organization-add/sale-organization-add.component.html
+++ b/src/app/layout/sale-organization/sale-organization-add/sale-organization-add.component.html
@@ -19,14 +19,14 @@
                         <div class="row">
                             <div class="form-group col-md-6">
                                 <label>Sale Organization Name</label>
-                                <input class="form-control" placeholder="Pruchase Organization Name">
+                                <input class="form-control" placeholder="Pruchase Organization Name"  [(ngModel)]="saleOrganization.name" name="name">
                             </div>
                             <div class="form-group col-md-6">
                                 <label>Organization Description</label>
-                                <textarea class="form-control" rows="1" placeholder="Organization Description"></textarea>
+                                <textarea class="form-control" rows="1" placeholder="Organization Description" [(ngModel)]="saleOrganization.description" name="description">{{saleOrganization.description}}></textarea>
                             </div>
                             <div class="form-group col-md-12" style="text-align: right">
-                            <button type="submit" class="btn btn-success">Submit</button>
+                            <button type="submit" class="btn btn-success" (click)="addNewSaleOrganization()">Submit</button>
                             <button type="reset" class="btn btn-secondary">Reset</button>
                             </div>
                         </div>
