--- a/src/app/layout/states/states-add/states-add.component.html
+++ b/src/app/layout/states/states-add/states-add.component.html
@@ -23,14 +23,14 @@
                           </div>
                           <div class="form-group col-md-4">
                               <label>Tin Number</label>
-                              <input class="form-control" [(ngModel)]="states.tin_number" name="tin_number" placeholder="Tin Number">
+                              <input class="form-control" [(ngModel)]="states.tin_number" name="tin_number" placeholder="Tin Number" >
                           </div>
                           <div class="form-group col-md-4">
                             <label>State Code</label>
                             <input class="form-control" [(ngModel)]="states.state_code" name="state_code" placeholder="State Code">
                         </div>
                           <div class="form-group col-md-12" style="text-align: right">
-                              <button type="submit" class="btn btn-success">Submit</button>
+                              <button type="submit" class="btn btn-success" (click)="addState()">Submit</button>
                               <button type="reset" class="btn btn-secondary">Reset</button>
                           </div>
                       </div>
