--- a/src/app/layout/states/states-edit/states-edit.component.html
+++ b/src/app/layout/states/states-edit/states-edit.component.html
@@ -30,7 +30,7 @@
                             <input class="form-control" [(ngModel)]="states.state_code" name="state_code" placeholder="State Code">
                         </div>
                           <div class="form-group col-md-12" style="text-align: right">
-                              <button type="submit" class="btn btn-success">Submit</button>
+                              <button type="submit" class="btn btn-success" (click)="updateState()">Submit</button>
                               <button type="reset" class="btn btn-secondary">Reset</button>
                           </div>
                       </div>
