--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,14 +7,14 @@
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="User Name">
+                        <input type="text" [(ngModel)]="login.username" name="username" class="form-control input-underline input-lg" placeholder="User Name">
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+                     <input type="password" [(ngModel)]="login.password" name="password"  class="form-control input-underline input-lg"  placeholder="Password">
                     </div>
                 </div>
-                <a class="btn rounded-btn" [routerLink]="['/company']" (click)="onLoggedin()"> Log in </a>
+                <a class="btn rounded-btn" href="javascript:void(0);" (click)="onLoggedin()"> Log in </a>
                 &nbsp;
                 <!-- <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a> -->
             </form>
