State add validation, Success and error massage and pagination done

--- a/src/app/layout/states/states.component.html
+++ b/src/app/layout/states/states.component.html
@@ -2,46 +2,64 @@
   <app-page-header [heading]="'States List'" [icon]="'fa fa-university'"></app-page-header>
   <div>
     <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-        <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-        <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('states/add')"><i class="fa fa-plus"></i> New State</button>
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+      <button type="button" class="btn btn-secondary">
+        <i class="fa fa-refresh"></i> Reload</button>
+      <button type="button" class="btn btn-success" (click)="btnClickNav('states/add')">
+        <i class="fa fa-plus"></i> New State</button>
     </div>
     <div class="clearfix"></div>
   </div>
-    
+
   <hr/>
   <div class="row">
     <div class="col-md-12">
-    <div class="card">
-      <div class="card-header">States</div>
-      <table class="card-body table table-hover table-sm table-bordered">
+      <div class="card">
+        <div class="card-header">States</div>
+        <table class="card-body table table-hover table-sm table-bordered">
           <thead>
-          <tr>
+            <tr>
               <th>Sl.No.</th>
               <th>State</th>
               <th>Tin</th>
               <th>State code</th>
               <th>Status</th>
               <th>Action</th>
-          </tr>
+            </tr>
           </thead>
           <tbody>
-          <tr  *ngFor="let state of stateList ; let i = index" >
-            <th scope="row">{{i +1}}</th>
-            <td>{{state.state_name}}</td>
-            <td>{{state.tin_number}}</td>
-            <td>{{state.state_code}}</td>
-            <td>
-              <a href="javascript:void(0);" title="Active" name="Active" (click)="inactiveState(state.id)" *ngIf="state.status==true"><i class="fa fa-thumbs-up"></i> Active</a>
-              <a href="javascript:void(0);" title="Inactive" name="Inactive" (click)="activeState(state.id)" *ngIf="state.status==false"><i class="fa fa-thumbs-down"></i> Inactive</a></td>
-            <td>
-              <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/states/edit', state.id]"><i class="fa fa-edit"></i></a>&nbsp;&nbsp;&nbsp;
-              <a href="javascript:void(0);" title="Map" name="Map" (click)="deleteState(state.id)"><i class="fa fa-trash-o"></i></a>
-            </td>
-          </tr>
+            <tr *ngFor="let state of stateList ; let i = index">
+              <th scope="row">{{i +1}}</th>
+              <td>{{state.state_name}}</td>
+              <td>{{state.tin_number}}</td>
+              <td>{{state.state_code}}</td>
+              <td>
+                <a href="javascript:void(0);" title="Active" name="Active" (click)="inactiveState(state.id)" *ngIf="state.status==true">
+                  <i class="fa fa-thumbs-up"></i> Active</a>
+                <a href="javascript:void(0);" title="Inactive" name="Inactive" (click)="activeState(state.id)" *ngIf="state.status==false">
+                  <i class="fa fa-thumbs-down"></i> Inactive</a>
+              </td>
+              <td>
+                <a href="javascript:void(0);" title="Edit" name="Edit" [routerLink]="['/states/edit', state.id]">
+                  <i class="fa fa-edit"></i>
+                </a>&nbsp;&nbsp;&nbsp;
+                <a href="javascript:void(0);" title="Map" name="Map" (click)="deleteState(state.id)">
+                  <i class="fa fa-trash-o"></i>
+                </a>
+              </td>
+            </tr>
           </tbody>
-      </table>
+        </table>
+      </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card-body pull-right">
+        <ngb-pagination [collectionSize]="totalstateList" [(page)]="defaultPagination" (pageChange)="pagination()" size="sm"></ngb-pagination>
+      </div>
+    </div>
   </div>
+
 </div>
