--- a/src/app/layout/grn-reverse/grn-reverse.component.html
+++ b/src/app/layout/grn-reverse/grn-reverse.component.html
@@ -1,3 +1,54 @@
-<p>
-  grn-reverse works!
-</p>
+<div>
+  <app-page-header [heading]="'GRN Reverse List'" [icon]="'fa fa-university'"></app-page-header>
+  <div>
+    <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
+        <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
+        <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
+        <button type="button" class="btn btn-success" (click)="btnClickNav('grn-reverse/add')"><i class="fa fa-plus"></i> New GRN Reverse</button>
+    </div>
+    <div class="clearfix"></div>
+  </div>
+    
+  <hr/>
+  <div class="row">
+    <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">GRN</div>
+      <table class="card-body table table-hover table-sm table-bordered">
+          <thead>
+          <tr>
+              <th>Sl.No.</th>
+              <th>Reverse Grn No</th>
+              <th>Reverse Reason</th>
+              <th>Reverse GRN Date</th>
+              <th>Status</th>
+              <th>Action</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+              <th scope="row">1</th>
+              <td>17-18/02/GRN-0002</td>
+              <td>Shyam Futuretech</td>
+              <td>14-02-2018</td>
+              <td>
+                <select class="form-control">
+                  <option>Change Status</option>
+                  <option>Cancel</option>
+                  <option>Active</option>
+                </select>
+              </td>
+              <td>
+                <select class="form-control">
+                  <option>Change Approve</option>
+                  <option>Approve</option>
+                  <option>Dis-Approve</option>
+                </select>
+              </td>
+          </tr>
+          </tbody>
+      </table>
+    </div>
+  </div>
+  </div>
+</div>
