--- a/src/app/layout/states/states-edit/states-edit.component.html
+++ b/src/app/layout/states/states-edit/states-edit.component.html
@@ -12,26 +12,35 @@
   <div>
       <div class="row">
         <div class="col-md-12">
-            <form role="form">
+            <form role="form" [formGroup]="form">
               <div class="card bg-light mb-3">
                   <div class="card-header" style="background-color:#868e96; color: #fff;">State Edit</div>
                   <div class="card-body">
                       <div class="row">
                           <div class="form-group col-md-4">
                               <label>State Name</label>
-                              <input class="form-control" [(ngModel)]="states.state_name" name="state_name" placeholder="State Name">
+                              <input class="form-control" type="text" [(ngModel)]="states.state_name" name="state_name" placeholder="State Name" formControlName="state_name" [ngClass]="displayFieldCss('state_name')">
+                              <div class="invalid-feedback" *ngIf="isFieldValid('state_name')">
+                                Please enter state name
+                            </div>
                           </div>
                           <div class="form-group col-md-4">
                               <label>Tin Number</label>
-                              <input class="form-control" [(ngModel)]="states.tin_number" name="tin_number" placeholder="Tin Number">
+                              <input class="form-control" type="number" [(ngModel)]="states.tin_number" name="tin_number" placeholder="Tin Number" formControlName="tin_number" [ngClass]="displayFieldCss('tin_number')">
+                              <div class="invalid-feedback" *ngIf="isFieldValid('tin_number')">
+                                Please enter tin number
+                            </div>
                           </div>
                           <div class="form-group col-md-4">
                             <label>State Code</label>
-                            <input class="form-control" [(ngModel)]="states.state_code" name="state_code" placeholder="State Code">
+                            <input class="form-control" type="text" [(ngModel)]="states.state_code" name="state_code" placeholder="State Code" formControlName="state_code" [ngClass]="displayFieldCss('state_code')">
+                            <div class="invalid-feedback" *ngIf="isFieldValid('state_code')">
+                                Please enter state code
+                            </div>
                         </div>
                           <div class="form-group col-md-12" style="text-align: right">
                               <button type="submit" class="btn btn-success" (click)="updateState()">Submit</button>
-                              <button type="reset" class="btn btn-secondary">Reset</button>
+                              <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
                           </div>
                       </div>
                   </div>
