--- a/src/app/layout/states/states.component.html
+++ b/src/app/layout/states/states.component.html
@@ -1,7 +1,10 @@
 <div>
-  <app-page-header [heading]="'States List'" [icon]="'fa fa-university'"></app-page-header>
-  <div>
-    <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
+  <!-- <app-page-header [heading]="'States List'" [icon]="'fa fa-university'"></app-page-header> -->
+  <div class="row">
+    <div class="col-md-6">
+      <h4 class="page-header">States List</h4>
+    </div>
+    <div class="col-md-6 pull-right" style="text-align: right">
       <button type="button" class="btn btn-secondary">
         <i class="fa fa-question" aria-hidden="true"></i> Help</button>
       <button type="button" class="btn btn-secondary">
@@ -11,12 +14,29 @@
     </div>
     <div class="clearfix"></div>
   </div>
-
   <hr/>
   <div class="row">
     <div class="col-md-12">
       <div class="card">
-        <div class="card-header">States</div>
+        <div class="card-header">
+          <div class="row">
+            <div class="col-md-9">
+              States
+            </div>
+            <div class="col-md-3">
+              <form role="form" (ngSubmit)="dataSearch()">
+                <div class="input-group">
+                  <input type="text" class="form-control" name="search" placeholder="Search" [(ngModel)]="search_key">
+                  <div class="input-group-append">
+                    <button class="btn btn-secondary" type="submit">
+                      <i class="fa fa-search"></i>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
         <table class="card-body table table-hover table-sm table-bordered">
           <thead>
             <tr>
@@ -49,12 +69,15 @@
                 </a>
               </td>
             </tr>
+            <tr *ngIf="stateList.length == 0">
+              <td colspan="6" class="text-center">No record found</td>
+            </tr>
           </tbody>
         </table>
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row" *ngIf="totalstateList > 10">
     <div class="col-md-12">
       <div class="card-body pull-right">
         <ngb-pagination [collectionSize]="totalstateList" [(page)]="defaultPagination" (pageChange)="pagination()" size="sm"></ngb-pagination>
