--- a/src/app/layout/company/company-add/company-add.component.html
+++ b/src/app/layout/company/company-add/company-add.component.html
@@ -20,100 +20,60 @@
                         <div class="row">
                             <div class="form-group col-md-6">
                                 <label>Mother Company</label>
-                                <select class="form-control">
-                                    <option>Mother company</option>
-                                    <option>Child Company 1</option>
-                                    <option>Child Company 2</option>
-                                    <option>Sub Child Company 1</option>
-                                    <option>Sub Child Company 2</option>
-                                    <option>Sub Child Company 3</option>
-                                    <option>Sub Child Company 4</option>
+                                <select class="form-control"  [(ngModel)]="company.company" name="company_list">
+                                    <option value="0">Select Mother company</option>
+                                    <option *ngFor="let motherCompany of companyList ;" value="{{motherCompany.id}}">{{motherCompany.company_name}}</option>
                                 </select>
                             </div>
                             <div class="form-group col-md-6">
                                 <label>Company Name</label>
-                                <input class="form-control" placeholder="Name">
+                                <input class="form-control" [(ngModel)]="company.company_name" name="company_name" placeholder="Name">
                             </div>
                             <div class="form-group col-md-4">
                                 <label>Website</label>
-                                <input class="form-control" placeholder="Website">
+                                <input class="form-control" [(ngModel)]="company.company_url" name="company_url" placeholder="Website">
                             </div>
                             <div class="form-group col-md-4">
                                 <label>Email</label>
-                                <input class="form-control" placeholder="Email">
+                                <input class="form-control" [(ngModel)]="company.company_email" name="company_email" placeholder="Email">
                             </div>
                             <div class="form-group col-md-4">
                                 <label>Phone</label>
-                                <input class="form-control" placeholder="Phone">
+                                <input class="form-control" [(ngModel)]="company.company_contact" name="company_contact" placeholder="Phone">
                             </div>
                             <div class="form-group col-md-12">
                                 <label>Company Address</label>
-                                <textarea class="form-control" rows="3" placeholder="Company Address"></textarea>
+                                <textarea class="form-control" rows="3" placeholder="Company Address" [(ngModel)]="company.company_address" name="company_address">{{company.company_address}}</textarea>
                             </div>
                             <div class="form-group col-md-4">
                                 <label>State</label>
-                                <select class="form-control">
+                                <select class="form-control"  [(ngModel)]="company.company_state" name="company_state">
                                     <option value="0">Select State</option>
-                                    <option value="71">ANDHRA PRADESH</option>
-                                    <option value="72">ASSAM</option>
-                                    <option value="73">ARUNACHAL PRADESH</option>
-                                    <option value="74">GUJRAT</option>
-                                    <option value="75">BIHAR</option>
-                                    <option value="76">HARYANA</option>
-                                    <option value="77">HIMACHAL PRADESH</option>
-                                    <option value="78">JAMMU &amp; KASHMIR</option>
-                                    <option value="79">KARNATAKA</option>
-                                    <option value="80">KERALA</option>
-                                    <option value="81">MADHYA PRADESH</option>
-                                    <option value="82">MAHARASHTRA</option>
-                                    <option value="83">MANIPUR</option>
-                                    <option value="84">MEGHALAYA</option>
-                                    <option value="85">MIZORAM</option>
-                                    <option value="86">NAGALAND</option>
-                                    <option value="87">ORISSA</option>
-                                    <option value="88">PUNJAB</option>
-                                    <option value="89">RAJASTHAN</option>
-                                    <option value="90">SIKKIM</option>
-                                    <option value="91">TAMIL NADU</option>
-                                    <option value="92">TRIPURA</option>
-                                    <option value="93">UTTAR PRADESH</option>
-                                    <option value="94">WEST BENGAL</option>
-                                    <option value="95">DELHI</option>
-                                    <option value="96">GOA</option>
-                                    <option value="97">PONDICHERY</option>
-                                    <option value="98">LAKSHDWEEP</option>
-                                    <option value="99">DAMAN &amp; DIU</option>
-                                    <option value="100">DADRA &amp; NAGAR</option>
-                                    <option value="101">CHANDIGARH</option>
-                                    <option value="102">ANDAMAN &amp; NICOBAR</option>
-                                    <option value="103">UTTARANCHAL</option>
-                                    <option value="104">JHARKHAND</option>
-                                    <option value="105">CHATTISGARH</option>
-                                    <option value="106">Telegana-2</option>
+                                    <option *ngFor="let state of stateList ;" value="{{state.id}}">{{state.state_name}}</option>
                                 </select>
                             </div>
                             <div class="form-group col-md-4">
                                 <label>City</label>
-                                <input class="form-control" placeholder="City Name">
+                                <input class="form-control" placeholder="City Name" [(ngModel)]="company.company_city" name="company_city">
                             </div>
                             <div class="form-group col-md-4">
                                 <label>Pin</label>
-                                <input class="form-control" placeholder="Pin">
+                                <input class="form-control" placeholder="Pin"  [(ngModel)]="company.company_pin" name="company_pin">
                             </div>
                             <div class="form-group col-md-4">
                                 <label>GSTIN</label>
-                                <input class="form-control" placeholder="GSTIN">
+                                <input class="form-control" placeholder="GSTIN"  [(ngModel)]="company.company_gst" name="company_gst">
                             </div>
                             <div class="form-group col-md-4">
                                 <label>PAN</label>
-                                <input class="form-control" placeholder="PAN">
+                                <input class="form-control" placeholder="PAN" [(ngModel)]="company.company_pan" name="company_pan">
                             </div>
                             <div class="form-group col-md-4">
                                 <label>CIN</label>
-                                <input class="form-control" placeholder="CIN">
+                                <input class="form-control" placeholder="CIN" placeholder="CIN" [(ngModel)]="company.company_cin" name="company_cin">
                             </div>
                             <div class="form-group col-md-12" style="text-align: right">
-                            <button type="submit" class="btn btn-success">Submit</button>
+                            <button type="submit" class="btn btn-success" (click)="addNewCompany()">Submit</button>
                             <button type="reset" class="btn btn-secondary">Reset</button>
                             </div>
                         </div>
