--- a/src/app/layout/states/states.component.html
+++ b/src/app/layout/states/states.component.html
@@ -21,7 +21,7 @@
         <div class="card-header">
           <div class="row">
             <div class="col-md-9">
-              States
+              <h5>States</h5>
             </div>
             <div class="col-md-3">
               <form role="form" (ngSubmit)="dataSearch()">
