purchase organization done

--- a/src/app/layout/states/states-add/states-add.component.html
+++ b/src/app/layout/states/states-add/states-add.component.html
@@ -1,7 +1,10 @@
 <div>
-    <app-page-header [heading]="'State Add'" [icon]="'fa fa-university'"></app-page-header>
-    <div>
-        <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
+    <!-- <app-page-header [heading]="'State Add'" [icon]="'fa fa-university'"></app-page-header> -->
+    <div class="row">
+        <div class="col-md-6">
+            <h4 class="page-header">States Add</h4>
+        </div>
+        <div class="col-md-6 pull-right" style="text-align: right">
             <button type="button" class="btn btn-secondary">
                 <i class="fa fa-question" aria-hidden="true"></i> Help</button>
             <button type="button" class="btn btn-secondary">
