--- a/src/app/layout/purchase-organization/purchase-organization-add/purchase-organization-add.component.html
+++ b/src/app/layout/purchase-organization/purchase-organization-add/purchase-organization-add.component.html
@@ -1,39 +1,52 @@
 <div>
-    <app-page-header [heading]="'Purchase Organization Add'" [icon]="'fa fa-university'"></app-page-header>
-    <div>
-      <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
-          <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
-          <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-          <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-organization')"><i class="fa fa-arrow-left"></i> Back</button>
-      </div>
-      <div class="clearfix"></div>
+    <!-- <app-page-header [heading]="'Purchase Organization Add'" [icon]="'fa fa-university'"></app-page-header> -->
+    <div class="row">
+        <div class="col-md-6">
+            <h4 class="page-header">Purchase Organization Add</h4>
+        </div>
+        <div class="col-md-6 pull-right" style="text-align: right">
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-question" aria-hidden="true"></i> Help</button>
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-refresh"></i> Reload</button>
+            <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-organization')">
+                <i class="fa fa-arrow-left"></i> Back</button>
+        </div>
+        <div class="clearfix"></div>
     </div>
     <hr/>
     <div>
         <div class="row">
-          <div class="col-md-12">
-              <form role="form">                  
-                <div class="card bg-light mb-3">
-                    <div class="card-header" style="background-color:#868e96; color: #fff;">Pruchase Organization Add</div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="form-group col-md-6">
-                                <label>Pruchase Organization Name</label>
-                                <input class="form-control" placeholder="Pruchase Organization Name" [(ngModel)]="purchaseOrganization.name" name="name">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label>Organization Description</label>
-                                <textarea class="form-control" rows="1" placeholder="Organization Description" [(ngModel)]="purchaseOrganization.description" name="description">{{purchaseOrganization.description}}</textarea>
-                            </div>
-                            <div class="form-group col-md-12" style="text-align: right">
-                                <button type="submit" class="btn btn-success" (click)="addNewPurchaseOrganization()">Submit</button>
-                                <button type="reset" class="btn btn-secondary">Reset</button>
+            <div class="col-md-12">
+                <form role="form" [formGroup]="form">
+                    <div class="card bg-light mb-3">
+                        <div class="card-header" style="background-color:#868e96; color: #fff;">Pruchase Organization Add</div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    <label>Pruchase Organization Name</label>
+                                    <input class="form-control" placeholder="Pruchase Organization Name" name="name" formControlName="name" [ngClass]="displayFieldCss('name')">
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('name')">
+                                        Please enter Pruchase Organization name
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label>Organization Description</label>
+                                    <textarea class="form-control" rows="1" placeholder="Organization Description" name="description" formControlName="description"
+                                        [ngClass]="displayFieldCss('description')"></textarea>
+                                    <div class="invalid-feedback" *ngIf="isFieldValid('description')">
+                                        Please enter Organization Description
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-12" style="text-align: right">
+                                    <button type="submit" class="btn btn-success" (click)="addNewPurchaseOrganization()">Submit</button>
+                                    <button type="reset" class="btn btn-secondary" (click)="reSet()">Reset</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>   
-              </form>
-          </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
