--- a/src/app/layout/purchase-organization/purchase-organization-mapping/purchase-organization-mapping.component.html
+++ b/src/app/layout/purchase-organization/purchase-organization-mapping/purchase-organization-mapping.component.html
@@ -1,7 +1,10 @@
 <div>
-    <app-page-header [heading]="'Purchase Organization Mapping'" [icon]="'fa fa-university'"></app-page-header>
-    <div>
-      <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
+    <!-- <app-page-header [heading]="'Purchase Organization Mapping'" [icon]="'fa fa-university'"></app-page-header> -->
+    <div class="row">
+            <div class="col-md-6">
+                    <h4 class="page-header">Purchase Organization Mapping</h4>
+                </div>
+      <div class="col-md-6 pull-right" style="text-align: right">
           <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
           <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
           <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-organization')"><i class="fa fa-arrow-left"></i> Back</button>
