--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -123,7 +123,7 @@
                     <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/employees']">
                         <i class="fa fa-users" aria-hidden="true"></i> Employees
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/material']">
                         <i class="fa fa-list" aria-hidden="true"></i> Material
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)">
